# Python_Laba_3

./: README.md  pyproject.toml  requirements.txt
src/: data_structure.py  factor_and_fibo.py  func_sort.py  main.py
tests/: test_data_structure.py  test_fibo_and_factorial.py  test_sorting.py
