[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lab3"
version = "0.1.0"
description = "Лабораторная работа №3: алгоритмический мини-пакет"
authors = [{name = "OikonoMike"}]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
